# cmake-demo

Demo3/: CMakeLists.txt  main.cc
Demo3/lib/: CMakeLists.txt
Demo3/lib/hello/: CMakeLists.txt  Hello.cc  Hello.h
Demo3/lib/math/: CMakeLists.txt
Demo6/: CMakeLists.txt
